--- a/index.html
+++ b/index.html
@@ -196,7 +196,27 @@
   <div id="set" class="dn sect wf r h9-l f6 lhc oya">
     <div class="nodrag mb5 mb0-l c6 pr4-l hf-l oya-l">
       <h2 class="mb3 f5">Guide</h2>
-      <p class="mb4">The Log is designed for single-tasking. When you start a log, focus on your activity; when you feel like stopping, simply end the log.
+      <p class="mb4">The Log is designed for single-tasking. When you start a log, focus on your activity; when you feel like stopping, simply end the log.</p>
+
+      <h3 class="mb3 f5">Stats</h3>
+      <table class="mb4 bn">
+        <tbody>
+          <tr><td>LHt</td><td>Total logged hours for today</td></tr>
+          <tr><td>ASDt</td><td>Average session duration for today</td></tr>
+          <tr><td>LSn</td><td>Shortest log session for today</td></tr>
+          <tr><td>LSx</td><td>Longest log session for today</td></tr>
+          <tr><td>LPt</td><td>Log percentage; how much of the day was logged</td></tr>
+          <tr><td>LHh</td><td>Total logged hours over all</td></tr>
+          <tr><td>LShn</td><td>Shortest log session</td></tr>
+          <tr><td>LShx</td><td>Longest log session</td></tr>
+          <tr><td>LPt</td><td>Log percentage; how much of the time period was logged</td></tr>
+          <tr><td>ASD</td><td>Average session duration</td></tr>
+          <tr><td>SF</td><td>Forecasted sector focus</td></tr>
+          <tr><td>PF</td><td>Forecasted project focus</td></tr>
+          <tr><td>PT</td><td>Forecasted peak hour for today</td></tr>
+          <tr><td>SD</td><td>Forecasted average session duration for today</td></tr>
+        </tbody>
+      </table>
 
       <h3 class="mb3 f5">Console</h3>
       <p class="mb4 m">Use the console to enter commands. The console is summoned when you start typing. Here are a list of available commands:</p>
