--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
     const {dialog,app} = require('electron').remote
     const fs = require('fs')
 
-    Log.init(log)
+    Log.init()
   </script>
 
 </body>
