--- a/index.html
+++ b/index.html
@@ -283,12 +283,12 @@
       </div>
 
       <p class="mb3 m">Your data is stored in JSON. It contains your configurations, sector colour codes, and your log entries. If you have an existing log file (JSON), you can import it:</p>
-      <div class="bl pl3 m">
+      <div class="mb4 bl pl3 m">
         <p>import /location/of/file.json</p>
       </div>
 
       <p class="mb3 m">To export your data:</p>
-      <div class="bl pl3 m">
+      <div class="mb5 bl pl3 m">
         <p>export</p>
       </div>
 
