--- a/index.html
+++ b/index.html
@@ -180,10 +180,11 @@
     <table class="nodrag bn wf">
       <thead>
         <tr class="f6 al">
+          <th id="tableID" class="ar" title="ID">ID</th>
           <th id="tableDate" title="Date"></th>
           <th id="tableStart" title="Start"></th>
           <th id="tableEnd" title="End"></th>
-          <th id="tableDuration" title="Duration"></th>
+          <th id="tableDuration" class="ar" title="Duration"></th>
           <th id="tableSector" title="Sector"></th>
           <th id="tableProject" title="Project"></th>
           <th id="tableActivity" title="Activity"></th>
