Add sector and project counts

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
   <div id="lis" class="dn sect h9 r">
 
     <div class="c2 hf-l">
-      <h3 id="sectorsTitle" class="mb3 f6 fwn"></h3>
+      <h3 id="sectorsTitle" class="dib mb3 f6 fwn"></h3> <span id="sectorsListCount" class="f6">0</span>
       <ul id="sectorsList" class="nodrag lsn h9-l oya-l pr3"></ul>
     </div>
 
@@ -169,7 +169,7 @@
     </div>
 
     <div class="c2 hf-l">
-      <h3 id="projectsTitle" class="mb3 f6 fwn"></h3>
+      <h3 id="projectsTitle" class="dib mb3 f6 fwn"></h3>  <span id="projectsListCount" class="f6">0</span>
       <ul id="projectsList" class="nodrag lsn h9-l oya-l pr3"></ul>
     </div>
   </div>
