--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 
   <div id="ovw" class="sect h9">
     <div class="c2 mb4">
-      <h3 id="peakTimesTitle" class="mb4 f6 fwn" title="Peak Times">&#9650;</h3>
+      <h3 id="peakTimesTitle" class="mb4 f6 fwn" title="Peak Times"></h3>
 
       <div id="phc" class="mb4 sh5 wf" title="Peak Hours"></div>
       <div id="pdc" class="mb4 sh5 wf" title="Peak Days"></div>
 
-      <h3 id="forecastTitle" class="mb3 f6 fwn" title="Today's Forecast">&#9670;</h3>
+      <h3 id="forecastTitle" class="mb3 f6 fwn" title="Today's Forecast"></h3>
 
       <div class="f6 mon r">
         <p class="mb1 c3 c3-m cc-l">
@@ -53,7 +53,7 @@
       </div>
     </div>
     <div class="c8 ph4-l hf-l oya-l">
-      <h3 id="overviewTitle" class="mb4 f6 fwn" title="Overview">&#128902;</h3>
+      <h3 id="overviewTitle" class="mb4 f6 fwn" title="Overview"></h3>
 
       <div class="ph1">
         <div class="mb3 psr wf sh2 bl br">
@@ -127,8 +127,9 @@
     </div>
     <div class="c2 hf-l oya-l">
       <h3 id="sectorsTodayTitle" class="mb4 f6 fwn"></h3>
-      <ul id="sectorBars" class="nodrag lsn mb4 h4-l oya-l"></ul>
-      <ul id="projectBars" class="nodrag lsn h4-l oya-l"></ul>
+      <ul id="sectorBars" class="nodrag lsn mb4 h3-l oya-l"></ul>
+      <h3 id="projectsTodayTitle" class="mb4 f6 fwn"></h3>
+      <ul id="projectBars" class="nodrag lsn h3-l oya-l"></ul>
     </div>
   </div>
 
@@ -177,7 +178,7 @@
   <div id="vis" class="nodrag dn sect h9 oya" title="Distribution of Time: Each row is a day and each bar is a log session."></div>
 
   <div id="tab" class="dn sect wf h9 oya">
-    <table class="nodrag bn wf">
+    <table class="nodrag bn">
       <thead>
         <tr class="f6 al">
           <th id="tableID" class="ar" title="ID">ID</th>
@@ -310,8 +311,8 @@
     </div>
   </div>
 
-  <form id="cmd" class="dn psf b0 l0 wf f6 bst z9" action="#" onsubmit="return false;" autocomplete="off" spellcheck="false">
-    <input type="text" class="wf bg-1 blanc on bn p3" id="console" autofocus="autofocus" placeholder="> Log.console" />
+  <form id="cmd" class="dn psf b0 l0 wf f6 z9" action="#" onsubmit="return false;" autocomplete="off" spellcheck="false">
+    <input type="text" class="wf bg-0 blanc on bn p3" id="console" autofocus="autofocus" placeholder="> Log.console" />
   </form>
 
   <script src="data/user.js"></script>
