--- a/index.html
+++ b/index.html
@@ -96,13 +96,7 @@
             <span id="lhtt">0.00</span>
           </p>
         </li>
-        <li class="mb4 c6 c3-m c3-l">
-          <p class="f3 fwb"><span id="ASDT">0.00</span> h</p>
-          <p class="f6">
-            <span class="mr2" title="Average Session Duration (Today)">ASDt</span>
-            <span id="asdtt">0.00</span>
-          </p>
-        </li>
+
         <li class="mb4 c6 c3-m c3-l">
           <p class="f3 fwb"><span id="LSN">0.00</span> h</p>
           <p class="f6">
@@ -117,6 +111,15 @@
             <span id="lsxt">0.00</span>
           </p>
         </li>
+
+        <li class="mb4 c6 c3-m c3-l">
+          <p class="f3 fwb"><span id="ASDT">0.00</span> h</p>
+          <p class="f6">
+            <span class="mr2" title="Average Session Duration (Today)">ASDt</span>
+            <span id="asdtt">0.00</span>
+          </p>
+        </li>
+
         <li class="mb4 c6 c3-m c3-l">
           <p class="f3 fwb"><span id="LPT">0.00</span>%</p>
           <p class="f6">
@@ -125,17 +128,16 @@
           </p>
         </li>
         <li class="mb4 c6 c3-m c3-l">
-          <p class="f3 fwb"><span id="entryCount">0.00</span>%</p>
+          <p class="f3 fwb"><span id="entryCount">0</span></p>
           <p class="f6">
             <span class="mr2" title="Entries (Today)">Entries</span>
-            <span id="entryCountt">0.00</span>
+            <span id="entt">0.00</span>
           </p>
         </li>
         <li class="mb4 c6 c3-m c3-l">
           <p class="f3 fwb"><span id="streakToday">0.00</span> d</p>
           <p class="f6">
             <span class="mr2" title="Log Streak">Streak</span>
-            <span id="logStreakt">0.00</span>
           </p>
         </li>
       </ul>
@@ -158,7 +160,7 @@
 
     <div class="cb pl4-l hf-l">
       <div id="sum" class="subsect hf r">
-        <div class="c9 hf pr4-l">
+        <div class="c9 hf pr4-l oya-l">
           <h3 id="statsTitle" class="dn mb4 f6 fwn"></h3>
 
           <ul class="mb4 lsn f6 lhc r">
@@ -194,18 +196,26 @@
 
           <ul class="mb4 lsn f6 lhc r">
             <li class="mb4 c6 c3-m c3-l">
-              <p class="f3 fwb"><span id="">0</span></p>
+              <p class="f3 fwb"><span id="entCount">0</span></p>
               <p class="f6" title="Number of Entries">Entries</p>
             </li>
             <li class="mb4 c6 c3-m c3-l">
-              <p class="f3 fwb"><span id="">0</span></p>
+              <p class="f3 fwb"><span id="secCount">0</span></p>
               <p class="f6" title="Number of Sectors">Sectors</p>
             </li>
             <li class="mb4 c6 c3-m c3-l">
-              <p class="f3 fwb"><span id="">0</span></p>
+              <p class="f3 fwb"><span id="proCount">0</span></p>
               <p class="f6" title="Number of Projects">Projects</p>
             </li>
           </ul>
+
+          <h3 id="" class="mb4 f6 fwn">Focus</h3>
+
+          <h3 id="" class="mb2 f6 fwn">Sector Focus</h3>
+          <div class="mb4 wf sh2 bg-noir"></div>
+
+          <h3 id="" class="mb2 f6 fwn">Project Focus</h3>
+          <div class="mb4 wf sh2 bg-noir"></div>
 
         </div>
 
