--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
     <div class="cb pl4-l hf-l">
       <div id="sum" class="subsect hf r">
-        <div class="c9 hf pr4-l oya-l">
+        <div class="nodrag c9 hf pr4-l oya-l">
           <h3 id="statsTitle" class="dn mb4 f6 fwn"></h3>
 
           <ul class="mb4 lsn f6 lhc r">
@@ -210,6 +210,8 @@
           </ul>
 
           <h3 id="" class="mb4 f6 fwn">Focus</h3>
+
+          <div id="focusChart" class="mb4 wf vh1"></div>
 
           <h3 class="mb2 f6 fwn">Sector Focus</h3>
           <div id="sectorFocusBar" class="mb4 wf sh2"></div>
