--- a/index.html
+++ b/index.html
@@ -406,38 +406,52 @@
         <p>end</p>
       </div>
 
-      <p class="mb3 m">To change the interface's background colour, set a hexadecimal colour of your choice. HTML-friendly colour names are also accepted:</p>
+      <p class="mb3 m">To edit a log entry, use the entry's log entry ID (shown in the Entries table):</p>
+      <div class="mb4 bl pl3 m">
+        <p class="mb2">edit 12 sector "Code" <span class="o8">// changes entry 12's sector to Code</span></p>
+        <p class="mb2">edit 25 project "Fishing"</p>
+        <p>edit 3 description "Chasing dragon"</p>
+      </div>
+
+      <p class="mb3 m">To delete a log entry:</p>
+      <div class="mb4 bl pl3 m">
+        <p>delete 15 <span class="o8">// deletes log entry 15</span></p>
+      </div>
+
+      <p class="mb3 m">To change the interface's background colour, set a hexadecimal colour of your choice. HTML colour names are also accepted:</p>
       <div class="mb4 bl pl3 m">
         <p class="mb2">set background #aabbcc</p>
         <p>set background aquamarine</p>
       </div>
 
-      <p class="mb3 m">To change the interface's text colour, set a hexadecimal colour of your choice. HTML-friendly colour names are also accepted:</p>
+      <p class="mb3 m">To change the interface's text colour, set a hexadecimal colour of your choice. HTML colour names are also accepted:</p>
       <div class="mb4 bl pl3 m">
         <p class="mb2">set color #112233</p>
         <p>set color black</p>
       </div>
 
-      <p class="mb3 m">To set your sectors' colour codes (for instance, if you would like entries under "Fishing" to appear green in charts):</p>
+      <p class="mb3 m">To change the interface's accent colour, set a hexadecimal colour of your choice. HTML colour names are also accepted:</p>
+      <div class="mb4 bl pl3 m">
+        <p class="mb2">set accent #ac1d1c</p>
+        <p>set accent red</p>
+      </div>
+
+      <p class="mb3 m">To set your sectors' and projects' colour codes (for instance, if you would like entries under "Fishing" to appear green in charts):</p>
       <div class="mb4 bl pl3 m">
         <p class="mb2">set sector "Fishing" green</p>
-        <p>set sector "Productive Activities" #c0ffee</p>
+        <p>set project "Top Secret Project" #c0ffee</p>
       </div>
 
-      <p class="mb3 m">The clockscreen appears when you have an active log session and is enabled by default. To disable it:</p>
+      <p class="mb3 m">The colour mode defines how charts show colour &mdash; using sector or project colour codes:</p>
       <div class="mb4 bl pl3 m">
-        <p>enable/disable clockscreen</p>
+        <p class="mb2">set colourmode sector</p>
+        <p>set colourmode project</p>
       </div>
 
-      <p class="mb3 m">Perhaps you don't find my arbitrary choice of icons to be useful. You may enable/disable them:</p>
+      <p class="mb3 m">To change the number of log days displayed in the charts:</p>
       <div class="mb4 bl pl3 m">
-        <p>set icons true/false</p>
-      </div>
-
-      <p class="mb3 m">To change the number of log days displayed in the overview chart, the visualisation section, and the log table:</p>
-      <div class="mb4 bl pl3 m">
-        <p class="mb2">set view 30 // shows only the last 30 days</p>
-        <p>set view 7 // shows only the last 7 days</p>
+        <p class="mb2">set view 30 <span class="o8">// shows only the last 30 days</span></p>
+        <p>set view 7 <span class="o8">// shows only the last 7 days</span></p>
       </div>
 
       <p class="mb3 m">To change the calendar system used, choose between the Gregorian, MONOCAL, or Aequirys calendars. This does not affect your logs. It simply shows dates differently:</p>
@@ -447,13 +461,13 @@
         <p>set calendar aequirys</p>
       </div>
 
-      <p class="mb3 m">To change the time format, choose between 12-hours or 24-hours:</p>
+      <p class="mb3 m">To change the time format, choose between 12- or 24-hours:</p>
       <div class="mb4 bl pl3 m">
         <p class="mb2">set time 12</p>
         <p>set time 24</p>
       </div>
 
-      <p class="mb3 m">Your data is stored in JSON. It contains your configurations, sector colour codes, and your log entries. If you have an existing log file (JSON), you can import it:</p>
+      <p class="mb3 m">If you have an existing data file (JSON), you can import it using this command. Alternatively, you may also drag-and-drop the file into this window to import your logs and configurations.</p>
       <div class="mb4 bl pl3 m">
         <p>import /location/of/file.json</p>
       </div>
@@ -466,7 +480,7 @@
     </div>
     <div class="nodrag mb5 mb0-l c6 pl4-l hf-l oya-l">
       <h2 class="mb3 f5">Log v1.0.0</h2>
-      <p class="mb4 m">Log is a log and time-tracking system. Its primary purpose is to provide insight to how one's time is spent &mdash; insight that may then be used to optimise personal productivity and better manage time.</p>
+      <p class="mb4 m">Log is a log and time-tracking system. Its primary purpose is to provide insight to how one's time is spent to optimise personal productivity and better manage time.</p>
 
       <h3 class="mb3 f5">Contribution</h3>
       <p class="mb3 m">This project is open-source and its source code is available on GitHub under the MIT License:</p>
@@ -475,7 +489,7 @@
       <p class="mb3 m">If you have any thoughts, comments, suggestions, questions, or if you simply want to say hello:</p>
       <p class="bl pl3 mb4 m">Twitter: @joshavanier</p>
 
-      <p class="mb3">Thank you for taking the time to try this out. Happy logging!</p>
+      <p class="mb3">Thank you for taking the time to try this out.</p>
       <p class="mb5">&mdash; Josh</p>
     </div>
   </div>
