--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="css/macian.min.css">
   <script src="utils/aequirys.min.js"></script>
   <script src="utils/monocal.min.js"></script>
+  <script src="utils/desamber.js"></script>
 </head>
 <body id="app" class="noselect r p4 p5-m p5-l hf cn">
 
